--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/wonder-coconut/personal/python/discord/xdbot/virtual/bin/python3"
+    "python.pythonPath": "/usr/bin/python3"
 }
